@startuml

package Compiler #DDDDDD {}

package Compiler.Grammar #FFFFFF{

abstract class GrammarToken {
    -- Class variables --
    - Token[*..] values
    -- Instance variables --
    - String value
    -- Constructor --
    + GrammarToken(String value)
    -- Get methods --
    + getValue() : String
    + getValues() : Token[]
}

class TerminalToken extends GrammarToken {
    -- Class variables --
    - TerminalToken[*..] terminalValues
    - Type type
    -- Constructor --
    + TerminalToken(String value)
    + TerminalToken(String value, Type type)
    -- Get methods --
    + getTerminalValues() : TerminalToken[*..]
    + getType() : Type
    -- Set methods --
    + setType(Type type) : void
}

class NonTerminalToken extends GrammarToken {
    -- Class variables --
    - NonTerminalToken[*..] nonTerminalValues
    -- Instance variables --
    - Rule[*..] rules
    -- Constructor --
    + NonTerminalToken(String value)
    -- Get methods --
    + GetNonTerminalValues() : NonTerminalToken[*..]
}

class Type {
    -- Class variables --
    - Type[*..] types
    -- Instance variables --
    - String name
    -- Constructor --
    + Type(String name)
    -- Get methods --
    + GetName() : String
    + GetTypes() : Type[]
}

TerminalToken "many" *-- "1" Type

class Structure extends Type {
    -- Class variables --
    - Structure[*..] values
    -- Instance variables --
    - Variable[*..] variables
    -- Constructor --
    + Structure(String name)
    -- Get methods --
    + GetVariables() : Variable[]
    -- Set methods --
    + setVariables(ArrayList<Variable> variables) : void
    + AddVariable(Variable variable) : void
    + RemoveVariable(Variable variable) : void
}

Expression "many" *-- "1" GrammarToken


class Expression {
    -- Instance variables --
    - GrammarToken[*..] tokens
    -- Constructor --
    + Expression(GrammarToken[] tokens)
    -- Get methods --
    + GetTokens() : GrammarToken[]
    + GetPosition() : int
    + GetCurrentToken() : GrammarToken
    -- Set methods --
    + SetPosition(int position) : void
    -- Methods --
    + NextToken() : GrammarToken
}

Rule "1" *-- "1" Expression
Rule "1" *-- "1" NonTerminalToken

class Rule {
    -- Instance variables --
    - NonTerminalToken sourceToken
    - Expression expression
}

Lexer "1" *-- "many" TerminalToken


}

package Compiler.Lexer #FFFFFF {

class Lexer {
    -- Instance variables --
    - String sourceCode
    - long positionId
    - char currentChar
    - ArrayList<TerminalToken> tokens
    -- Constructor --
    + Lexer(String sourceCode)
    -- Get methods --
    + getNextChar() : char
    + getTokens() : Token[]
    + getPositionId() : long
    + getCurrentChar() : char
    -- Set methods --
    + setPositionId(long positionId) : void
    -- Methods --
    + skipWhitespace() : void
}

}

@enduml